--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,46 +1,62 @@
 header {
   background-color: black;
   color: white;
-  padding: 2%;
+  height: 60px;
 }
 
 h1 {
   font: bold 2em sans-serif;
   color: white;
+  padding: 1%;
+}
+
+h3 {
+  color: black
+  font-weight: medium;
+  text-align: left;
 }
 
 .login {
-  background-color: limegreen;
-  color: white;
+  background-color: olivedrab;
   float: right;
+  height: 100%;
+  width: 8%;
+  display: flex;
+}
+
+h4{
+  color: white;
+  font-family: sans-serif;
+  vertical-align: middle;
+  margin: auto;
 }
 
 nav {
-  background-color: navy;
+  background-color: midnightblue;
   color: white;
-  padding: 2%;
+  padding: 1%;
+  border-top: 2px solid white;
+  font-family: sans-serif;
 }
 
 .menu {
   display: flex;
   flex-direction: row;
+  justify-content: center;
 }
 
 li.menu {
   padding: 2px;
-  margin: auto;
+  margin: .5% 8%;
 }
 
 .hero {
   background: #fff url("../images/1.jpg") no-repeat center;
   background-size: cover;
   height: 65vh;
-  padding: 2%;
 }
 
 p {
-  color: white;
-  background-color: grey;
   padding: 1%;
   font-family: sans-serif;
 }
@@ -54,10 +70,33 @@ p {
   width: 30%;
   height: 200px;
   margin: auto;
+  overflow: hidden;
+  color: black;
+  font-weight: bold;
+  text-decoration: none;
+  font-family: sans-serif;
+  text-align: center;
 }
 
-.place img {
+.image {
+  display: inline-block;
+  vertical-align: middle;
+  height: 100%;
+  overflow: hidden;
+}
+
+.image img {
   width: 100%;
   height: auto;
-  overflow: hidden;
+  position: relative;
+  bottom: 50px;
+}
+
+section {
+  padding: 2%;
+}
+
+.text {
+  background-color: black;
+  color: white;
 }
